# caesar

./: .mailmap  CMakeLists.txt  COPYRIGHT.md  LinkDef.h  README.md
apps/: CMakeLists.txt
apps/bkgfinder/: CMakeLists.txt  main.cc
apps/crossMatchSimSources/: CMakeLists.txt  main.cc
apps/fits2root/: CMakeLists.txt  main.cc
apps/readimg/: CMakeLists.txt  main.cc
apps/root2fits/: CMakeLists.txt  main.cc
apps/saliencyfinder/: CMakeLists.txt  main.cc
apps/skymodelConvolver/: CMakeLists.txt  main.cc
apps/sourceAsciiExporter/: CMakeLists.txt  main.cc
apps/sourceAstroCatalogsMatchFinder/: CMakeLists.txt  main.cc
apps/sourceCatalogsCorrelator/: CMakeLists.txt  main.cc
apps/sourceCatalogsMatchFinder/: CMakeLists.txt  main.cc
apps/sourceCountsUnfolder/: CMakeLists.txt  ForwardFolder.cc  ForwardFolder.h  SpectrumUtils.cc  SpectrumUtils.h  main.cc
apps/sourceMVClassifier/: CMakeLists.txt  main.cc
apps/sourceMatchFinder/: CMakeLists.txt  main.cc
apps/sourceRefitter/: CMakeLists.txt  main.cc
apps/sourceRegionMatchFinder/: CMakeLists.txt  main.cc
apps/sourceRegionSelector/: CMakeLists.txt  main.cc
apps/sourceRegionTagger/: CMakeLists.txt  main.cc
apps/sourceResidualFinder/: CMakeLists.txt  main.cc
apps/sourceSelector/: CMakeLists.txt  main.cc
apps/sourceTreeWriter/: CMakeLists.txt  main.cc
apps/sourcefinder/: CMakeLists.txt  main.cc
apps/sourcefinderMPI/: CMakeLists.txt  main.cc
config/: CMakeLists.txt  config.cfg  config_findResidualImg.cfg  config_findSaliency.cfg  config_findSources.cfg  preselection_cuts.txt
data/: CMakeLists.txt  ScorpioExtendedSourceField.fits  ScorpioFaintSNRField.fits  ScorpioS17Field.fits  SourceClassifier_MLP.weights.xml  SourceClassifier_MLP.weights_ediff.xml  SourceClassifier_MLP.weights_last.xml
macros/: ApplySelTagsToDS9Regions.C  CMakeLists.txt  ComputeImagingPerformances.C  ComputePhotApertureFluxes.C  CrossMatchSources.C  DrawBlendedSource.C  DrawImagingPerformances.C  DrawSFinderPerformances.C  DrawSourcePosDiff.C  DrawSources.C  DumpSourceCoordsForMoidScript.C  ExtractSourceCutout.C  GeneratePointSourceMaps.C  MakeCircleRegionGrid.C  MakeMask.C  MergeSources.C  ParseMGPSCatalogFile.C  PlotSourceCounts.C  ReadATNFPsrObjects.C  ReadAegeanObjects.C  ReadCaesarObjects.C  ReadGaiaObjects.C  ReadHASHObjects.C  ReadMASHObjects.C  ReadMGPSObjects.C  ReadNedObjects.C  ReadSelavyObjects.C  ReadSimbadObjects.C  ReadWRCatObjects.C  ReadWiseHIIObjects.C  RunSourceClassifier.C  SelavyCatalogToTTree.C  SelectSimSourcesInMosaic.C  SetAstroObjLabels.C  SetSourceMetadata.C  ShuffleSourceCatalog.C  TestFitSource.C  WriteSourceAsciiCatalogs.C  WriteSourceDS9Regions.C  WriteSourceDataTree.C  (+1 more)
proto/: CMakeLists.txt  Source.proto  TaskData.proto
scripts/: AegeanSubmitter.sh  BatchJobKiller.sh  CMakeLists.txt  MakeFileList.sh  ParseMGPSCatalogData.py  ParseWRStarCatalogData.py  ParseWiseHIICatalogData.py  PyBDSFSubmitter.sh  RunASKAPMosaicSim.sh  RunASKAPSimpleMosaicSim.sh  RunCASAImaging.sh  RunCASASimulation.sh  RunSFinderMPI.sh  SFinderSubmitter.sh  (+18 more)
server/: CMakeLists.txt
server/broker/: CMakeLists.txt  ClassFactory.cpp  SFinderBroker.cpp  SFinderBroker.h  SFinderBroker.xmi  SFinderBrokerClass.cpp  SFinderBrokerClass.h  SFinderBrokerDynAttrUtils.cpp  SFinderBrokerStateMachine.cpp  WorkerSourceDataCallBack.cpp  WorkerSourceDataCallBack.h  WorkerStateCallBack.cpp  WorkerStateCallBack.h  main.cpp
server/utils/: CMakeLists.txt  Serializer.cc  Serializer.h  Source.proto  WorkerData.cc  WorkerData.h  WorkerManager.cc  WorkerManager.h  WorkerTask.cc  WorkerTask.h
server/worker/: CMakeLists.txt  ClassFactory.cpp  SFinder.cpp  SFinder.h  SFinder.xmi  SFinderClass.cpp  SFinderClass.h  SFinderStateMachine.cpp  SFinderTask.cpp  SFinderTask.h  SFinderThread.cpp  SFinderThread.h  main.cpp
src/: CMakeLists.txt
src/img/: CMakeLists.txt  Image.cc  Image.h  ImgMetaData.cc  ImgMetaData.h  ImgStats.cc  ImgStats.h
src/imgfilt/: CMakeLists.txt  GausFilter.cc  GausFilter.h  GradientFilter.cc  GradientFilter.h  GuidedFilter.cc  GuidedFilter.h  KirschFilter.cc  KirschFilter.h  LoGFilter.cc  LoGFilter.h  MorphFilter.cc  MorphFilter.h  SaliencyFilter.cc  SaliencyFilter.h  WTFilter.cc  WTFilter.h
src/imgio/: CMakeLists.txt  CasaReader.cc  CasaReader.h  FITSReader.cc  FITSReader.h  FITSWriter.cc  FITSWriter.h
src/imgproc/: BkgData.cc  BkgData.h  BkgFinder.cc  BkgFinder.h  Blob.cc  Blob.h  BlobFinder.cc  BlobFinder.h  CMakeLists.txt  ChanVeseSegmenter.cc  ChanVeseSegmenter.h  Contour.cc  Contour.h  Graph.cc  Graph.h  LRACSegmenter.cc  LRACSegmenter.h  Pixel.cc  Pixel.h  Region.cc  Region.h  SFinder.cc  SFinder.h  SLIC.cc  SLIC.h  SLICData.cc  SLICData.h  SLICSegmenter.cc  SLICSegmenter.h  Source.cc  Source.h  SourceCube.cc  SourceCube.h  SourceExporter.cc  SourceExporter.h  SourceFitter.cc  SourceFitter.h  ZernikeMoments.cc  ZernikeMoments.h
src/sproc/: Blob.cc  Blob.h  CMakeLists.txt  Source.cc  Source.h  SourceComponentPars.cc  SourceComponentPars.h  SourceCube.cc  SourceCube.h  SourceExporter.cc  SourceExporter.h  SourceFitPars.cc  SourceFitPars.h  SourceFitter.cc  SourceFitter.h  SourceGroup.cc  SourceGroup.h  SourceImporter.cc  SourceImporter.h  SourceMatchData.cc  SourceMatchData.h  SourceSelector.cc  SourceSelector.h  SpectralIndexData.cc  SpectralIndexData.h
src/utils/: AstroObject.cc  AstroObject.h  AstroObjectParser.cc  AstroObjectParser.h  AstroUtils.cc  AstroUtils.h  CMakeLists.txt  CodeUtils.cc  CodeUtils.h  ConfigParser.cc  ConfigParser.h  Consts.h  Cut.cc  Cut.h  CutParser.cc  CutParser.h  DS9Region.cc  DS9Region.h  DS9RegionParser.cc  DS9RegionParser.h  EllipseUtils.cc  EllipseUtils.h  GraphicsUtils.cc  GraphicsUtils.h  ImgUtils.cc  ImgUtils.h  Logger.cc  Logger.h  MathUtils.cc  MathUtils.h  Option.cc  Option.h  Serializer.cc  Serializer.h  StatsUtils.cc  StatsUtils.h  SysUtils.cc  SysUtils.h  TaskData.cc  TaskData.h  (+2 more)
test/: CMakeLists.txt  main.cc
test/env/: TestEnvironment.cc  TestEnvironment.h
test/img/: CMakeLists.txt  Test_Image.cc  Test_Image.h
test/utils/: CMakeLists.txt  Test_StatsUtils.cc  Test_StatsUtils.h
(+70 files in other folders)
