add_subdirectory(readimg)
add_subdirectory(sourcefinder)
add_subdirectory(bkgfinder)
add_subdirectory(fits2root)
add_subdirectory(root2fits)
add_subdirectory(saliencyfinder)
add_subdirectory(sourceResidualFinder)
add_subdirectory(sourcefinderMPI)
add_subdirectory(sourceCatalogsCorrelator)
add_subdirectory(skymodelConvolver)
add_subdirectory(sourceMatchFinder)
add_subdirectory(sourceRegionSelector)
add_subdirectory(sourceRegionMatchFinder)
add_subdirectory(sourceRegionTagger)
add_subdirectory(sourceSelector)
add_subdirectory(sourceCountsUnfolder)
add_subdirectory(sourceCatalogsMatchFinder)
add_subdirectory(sourceAstroCatalogsMatchFinder)
add_subdirectory(sourceTreeWriter)

set (INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
set (Task_ReadImg_SRCS ${Task_ReadImg_SRCS} PARENT_SCOPE)
set (Task_FindSource_SRCS ${Task_FindSource_SRCS} PARENT_SCOPE)
set (Task_FindSourceResidual_SRCS ${Task_FindSourceResidual_SRCS} PARENT_SCOPE)
set (Task_FindSaliency_SRCS ${Task_FindSaliency_SRCS} PARENT_SCOPE)
set (Task_FindBkg_SRCS ${Task_FindBkg_SRCS} PARENT_SCOPE)
set (Task_FITS2ROOT_SRCS ${Task_FITS2ROOT_SRCS} PARENT_SCOPE)
set (Task_ROOT2FITS_SRCS ${Task_ROOT2FITS_SRCS} PARENT_SCOPE)
set (Task_FindSourceMPI_SRCS ${Task_FindSourceMPI_SRCS} PARENT_SCOPE)
set (Task_CorrelateSourceCatalogs_SRCS ${Task_CorrelateSourceCatalogs_SRCS} PARENT_SCOPE)
set (Task_SkyModelConvolver_SRCS ${Task_SkyModelConvolver_SRCS} PARENT_SCOPE)
set (Task_SourceMatchFinder_SRCS ${Task_SourceMatchFinder_SRCS} PARENT_SCOPE)
set (Task_SourceRegionSelector_SRCS ${Task_SourceRegionSelector_SRCS} PARENT_SCOPE)
set (Task_SourceRegionMatchFinder_SRCS ${Task_SourceRegionMatchFinder_SRCS} PARENT_SCOPE)
set (Task_SourceRegionTagger_SRCS ${Task_SourceRegionTagger_SRCS} PARENT_SCOPE)
set (Task_SourceSelector_SRCS ${Task_SourceSelector_SRCS} PARENT_SCOPE)
set (Task_SourceCountsUnfolder_SRCS ${Task_SourceCountsUnfolder_SRCS} PARENT_SCOPE)
set (Task_SourceCatalogsMatchFinder_SRCS ${Task_SourceCatalogsMatchFinder_SRCS} PARENT_SCOPE)
set (Task_SourceAstroCatalogsMatchFinder_SRCS ${Task_SourceAstroCatalogsMatchFinder_SRCS} PARENT_SCOPE)
set (Task_SourceTreeWriter_SRCS ${Task_SourceTreeWriter_SRCS} PARENT_SCOPE)

