
add_subdirectory(utils)
add_subdirectory(worker)
add_subdirectory(broker)

set (SRCS ${SRCS} PARENT_SCOPE)
set (HEADERS ${HEADERS} PARENT_SCOPE)
set (HEADERS_WPATH ${HEADERS_WPATH} PARENT_SCOPE)
set (DICT_SRCS ${DICT_SRCS} PARENT_SCOPE)
set (DICT_HEADERS ${DICT_HEADERS} PARENT_SCOPE)
set (INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)


set (PROTO_DIR ${PROTO_DIR} PARENT_SCOPE)
set (PROTO_FILES ${PROTO_FILES} PARENT_SCOPE)
set (PROTO_SRCS ${PROTO_SRCS} PARENT_SCOPE)
set (PROTO_HEADERS ${PROTO_HEADERS} PARENT_SCOPE)

# SFINDER SERVER
set (SFINDER_SERVER_SRCS ${SFINDER_SERVER_SRCS} PARENT_SCOPE)
set (SFINDER_SERVER_HEADERS ${SFINDER_SERVER_HEADERS} PARENT_SCOPE)
set (SFINDER_SERVER_HEADERS_WPATH ${SFINDER_SERVER_HEADERS_WPATH} PARENT_SCOPE)
set (Main_SFINDER_SERVER_SRCS ${Main_SFINDER_SERVER_SRCS} PARENT_SCOPE)

# SFINDER BROKER SERVER
set (SFINDER_BROKERSERVER_SRCS ${SFINDER_BROKERSERVER_SRCS} PARENT_SCOPE)
set (SFINDER_BROKERSERVER_HEADERS ${SFINDER_BROKERSERVER_HEADERS} PARENT_SCOPE)
set (SFINDER_BROKERSERVER_HEADERS_WPATH ${SFINDER_BROKERSERVER_HEADERS_WPATH} PARENT_SCOPE)
set (Main_SFINDER_BROKERSERVER_SRCS ${Main_SFINDER_BROKERSERVER_SRCS} PARENT_SCOPE)

